图库点赞&知识库代码优化